feat(css): make it responsive

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,11 @@
 @import "./import.css";
 
 body {
-  background-color: cadetblue;
+  background-image: linear-gradient(
+    to right,
+    rgba(34, 193, 195, 1) 0%,
+    rgba(253, 187, 45, 1) 100%
+  );
 }
 .container {
   width: 100%;
