add filters + change design of whole interface + first fix for pagination + enable to use other GBIF parameters in the query function

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,11 +1,18 @@
 @import "./import.css";
 
+.fredoka {
+  font-family: "Fredoka", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
+}
 body {
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
     to right,
     rgba(34, 193, 195, 1) 0%,
     rgba(253, 187, 45, 1) 100%
-  );
+  ); */
 }
 .container {
   width: 100%;
